--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
+    "idb-keyval": "^6.2.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.302.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-static-copy": "^1.0.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
