--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@mercuryworkshop/bare-mux": "^2.0.4",
     "@mercuryworkshop/epoxy-transport": "^2.1.5",
     "@mercuryworkshop/libcurl-transport": "^1.3.7",
@@ -21,8 +23,12 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.51.15",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
     "@tomphttp/bare-client": "2.2.0-alpha",
+    "@uiw/codemirror-theme-monokai": "^4.23.0",
+    "@uiw/codemirror-theme-tokyo-night": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
