--- a/package.json
+++ b/package.json
@@ -7,59 +7,65 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "tsx server.ts"
   },
   "dependencies": {
     "@codemirror/lang-css": "^6.2.1",
     "@codemirror/lang-javascript": "^6.2.2",
-    "@mercuryworkshop/bare-mux": "^2.0.4",
-    "@mercuryworkshop/epoxy-transport": "^2.1.5",
+    "@fastify/static": "^7.0.4",
+    "@mercuryworkshop/bare-mux": "^2.0.5",
+    "@mercuryworkshop/epoxy-transport": "^2.1.9",
     "@mercuryworkshop/libcurl-transport": "^1.3.7",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.51.15",
-    "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
+    "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.53.3",
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.7",
     "@tomphttp/bare-client": "2.2.0-alpha",
+    "@tomphttp/bare-server-node": "^2.0.4",
     "@uiw/codemirror-theme-monokai": "^4.23.0",
     "@uiw/codemirror-theme-tokyo-night": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.16",
+    "clsx": "^2.1.1",
+    "fastify": "^4.28.1",
+    "framer-motion": "^10.18.0",
     "idb-keyval": "^6.2.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.302.0",
-    "nanoid": "^5.0.4",
+    "nanoid": "^5.0.7",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-static-copy": "^1.0.0",
-    "zustand": "^4.4.7"
+    "vite-plugin-static-copy": "^1.0.6",
+    "wisp-server-node": "^1.1.3",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.3.5"
+    "@types/node": "^20.16.3",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
   }
 }
