--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.26.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
